updated syntax to fix w2c errors
changed some <p> and <body> tags that were out of place.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -166,6 +166,7 @@ button:hover, button:focus  {
         /* better to use fractions as they are more repsonsive than pixels */
         grid-gap: 20px;
         margin: 0;
+        padding: 10px;
     }
     
     .grid__item  {
